--- a/Communiceren.html
+++ b/Communiceren.html
@@ -25,6 +25,7 @@
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
 					<li><a class="active" href="competenties.html">Competenties</a></li>
+					<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -38,12 +39,11 @@
 		<section id="main">
 				<a href="competenties.html">Competenties</a> > Communiceren en Adviseren
 				<h1>Communiceren en Adviseren</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>
+					<p><b>De student kan, zowel in het Nederlands als het Engels, ideeen, meningen, standpunten en besluiten correct, begrijpelijk en overtuigend overbrengen met behulp van verschillende communicatiekanalen.</b></p>
+					<p>Het delen van de resultaten van het project zullen gebeuren tijdens het seminar op 16 januari tijdens het seminar. Hierbij heeft de bezoeker alle tijd om vragen te stellen over het project en we zullen dan ook zo goed mogelijk antwoord moeten geven. Daarnaast is deze website een bewijs voor deze competentie. Met de website probeer ik te laten zien wat ik geleerd heb tijdens de minor.</p>
+					<p>Daarnaast zullen we aan het einde van januari of het begin van februari nog een presentatie geven aan alle 15 blauwe bessen telers die meedoen aan het project Blueberry innovators. De presentatie zal waarschijnlijk in het Engels moeten worden gegeven omdat niet alle telers uit Nederland komen. Tijdens de presentatie zullen we samen met de vorige projectgroep onze bevindingen en toekomstperspectieven geven over het project.</p> 
+					</p>
 			</section>
 			<aside id="sidebar">
 				<p>Communiceren en Adviseren</p>
