--- a/Professionaliseren.html
+++ b/Professionaliseren.html
@@ -25,6 +25,7 @@
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
 					<li><a class="active" href="competenties.html">Competenties</a></li>
+					<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -38,12 +39,11 @@
 		<section id="main">
 				<a href="competenties.html">Competenties</a> > Professionaliseren en Verantwoordelijkheid nemen
 				<h1>Professionaliseren en Verantwoordelijkheid nemen</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>
+					<p><b></b>De startende professional is in staat via de weg van reflectie zich professioneel te blijven ontwikkelen en een bijdrage te leveren aan de ontwikkeling van de organisatie en de beroepspraktijk door opgedane kennis te borgen, over te dragen en te verspreiden. Hierbij is de professional zich bewust van Smart Industry context waarin hij opereert en past zijn gedrag en/of zijn adviezen hierop aan.</p>
+					<p>Mijn rol voor het project was zoals eerder ook al aangegeven het contact persoon en planner. Maar daarnaast heb ik de technische kant van het project voornamelijk aangepakt. Helaas waren er in de groep leerlingen van de minor niet genoeg ICT’ers en daarom moest ik dus de taak aanpakken ondanks dat ik maar weinig kennis in huis heb. Ik heb daarbij mijn verantwoordelijkheid geprobeerd te dragen door veel help van buitenaf te vragen en daarbij eerlijk te zijn naar mijn projectleden dat ik helaas ook niet alles begrijp en kan. Helaas is het dus ook niet helemaal gelukt met het project omdat het op een technisch gebied vast liep. Om toch wel zoveel mogelijk resultaat te leveren heb ik samen met mijn projectleden er wel voor gezorgd dat de volgende projectgroep meteen door kan gaan met het project. We hebben Pim Deuling van Bluehub op de hoogte gebracht van de voortgangen maar ook de hinderlagen en tegenslagen. </p>
+					<p>Verder hebben we ook een eerlijk advies gegeven aan Pim Deuling om de volgende keer toch wel echt een ICT voor dit project in te zetten zodat de voortgang van het project kan worden gewaarborgd. </p>
+					</p>
 			</section>
 			<aside id="sidebar">
 				<p>Professionaliseren en Verantwoordelijkheid nemen </p>
