--- a/SB week 1.html
+++ b/SB week 1.html
@@ -25,6 +25,7 @@
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
 					<li><a href="competenties.html">Competenties</a></li>
+					<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Business.html">Smart Business</a> > Week 1
+				<a href="Smart Business.html">Smart Business</a> > Stel je zelf voor
 			<h1>Smart Business </h1>
 			<p>
 				<p><b>Waarom vind je het onderwerp Smart Industry boeiend?</b></p>
