--- a/SB week 2.html
+++ b/SB week 2.html
@@ -25,6 +25,7 @@
 				<li><a href="Smart Technologie.html">Smart Technology</a></li>
 				<li><a href="Smart Project.Html">Smart Project</a></li>
 				<li><a href="competenties.html">Competenties</a></li>
+				<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Business.html">Smart Business</a> > Week 2
+				<a href="Smart Business.html">Smart Business</a> > BeInformed
 			<h1>Smart Business </h1>
 <p><b>BeInformed</b></p>
 <p>Geert Rensen van BeInformed heeft in week 2 een gast college gegeven over het BMC, Design Thinking, veranderplan en businesscase.</p>
