--- a/SS week 2.html
+++ b/SS week 2.html
@@ -25,6 +25,7 @@
 				<li><a href="Smart Technologie.html">Smart Technology</a></li>
 				<li><a href="Smart Project.Html">Smart Project</a></li>
 				<li><a href="competenties.html">Competenties</a></li>
+				<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Start.html">Smart Start</a> > Week 2
+				<a href="Smart Start.html">Smart Start</a> > ATAG
 			<h1>Smart Start </h1>
 			<p>
 				<p>ATAG is een producent van keuken apparatuur met een zeer uitgebreid assortiment. Sinds 1943 maken ze al producten van hoge kwaliteit vandaar dat ze ook op veel producten 6 jaar garantie leveren. Daarnaast bieden ze ook een optie aan om gratis een gekocht gasfornuis te verwisselen met een inductieplaat als je huis binnen 10 jaar van het gasnetwerk wordt afgehaald.</p>
