--- a/SS week 3.html
+++ b/SS week 3.html
@@ -25,6 +25,7 @@
 				<li><a href="Smart Technologie.html">Smart Technology</a></li>
 				<li><a href="Smart Project.Html">Smart Project</a></li>
 				<li><a href="competenties.html">Competenties</a></li>
+				<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Start.html">Smart Start</a> > Week 3
+				<a href="Smart Start.html">Smart Start</a> > Sustainable business proposition
 				<h1>Smart Start</h1>
 				<p>
 					<p><b>Voorbereiding Smart Start week 3</b></p>
