--- a/SS week 4.html
+++ b/SS week 4.html
@@ -27,6 +27,7 @@
 				<li><a href="Smart Technologie.html">Smart Technology</a></li>
 				<li><a href="Smart Project.Html">Smart Project</a></li>
 				<li><a href="competenties.html">Competenties</a></li>
+				<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -38,7 +39,7 @@
 
 	<div class="container">
 		<section id="main">
-			<a href="Smart Start.html">Smart Start</a> > Week 4
+			<a href="Smart Start.html">Smart Start</a> > Agile en Lean
 			<h1>Smart Start</h1>
 			<p><b>Voorbereiding Smart Start week 4</b></p>
 			<p>
