--- a/ST week 3.html
+++ b/ST week 3.html
@@ -25,6 +25,7 @@
 					<li><a class="active" href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
 					<li><a href="competenties.html">Competenties</a></li>
+					<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -38,12 +39,12 @@
 		<section id="main">
 				<a href="Smart Technologie.html">Smart Technologie</a> > 3D Printing
 			<h1>Smart Technologie </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+				<p>Tijdens het 3D-printen van de bak hebben we gebruik gemaakt van SolidWorks om het model te maken waarmee we uiteindelijk het via de 3D printer op de HAN in Arnhem tot een fysiek object zijn gekomen.</p>
+				<p>Helaas had ik hier nog wel wat problemen mee. Ik had sommige foutmarges niet helemaal goed berekend waardoor niet alle componenten van perfect paste. Maar met een beetje schuren zijn alle componenten er toch goed in gekomen.</p>
+				<p>Tijdens het seminar op 16 januari zal het eind resultaat gepresenteerd worden.</p>
+				<img src= https://i.imgur.com/vLgVp34.png  alt="3D printen" width="60%" >
+				</p>
 		</section>
 		<aside id="sidebar">
 			<p>3D Printing </p>
