--- a/Smart Project.Html
+++ b/Smart Project.Html
@@ -27,6 +27,7 @@
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a class="active" href="Smart Project.Html">Smart Project</a></li>
 					<li><a href="competenties.html">Competenties</a></li>
+					<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -41,9 +42,9 @@
 			<h1>Smart Project</h1>
 			<p>
 				<p><b>Project Bluehub</b></p>
-				<p>Het Project Blueberry innovators is een samenwerkingsverband tussen 12 blauwe bessen telers in Nederland, Duitsland en België. De opdrachtgever naar school is Bluehub.</p> 
+				<p>Het Project Blueberry innovators is een samenwerkingsverband tussen 15 blauwe bessen telers in Nederland, Duitsland en België. De opdrachtgever naar school is Bluehub.</p> 
 				<p><b>Wat vooraf ging</b></p>
-				<p>Eerst zal ik beginnen met wat voor kennis, voor ons hebben al een projectgroep van de minor smart industry gewerkt aan een applicatie die het mogelijk maakt om onkruid te herkennen. Ze hebben hierbij gebruik gemaakt van Tensorflow. Tensorflow is een Machine learing tool van google die veel voor vergelijkbare doeleinde gebruikt wordt. De vorige projectgroep hebben met de tool 5 algemene onkruiden aangeleerd. De vijf soorten die ze hebben gedaan zijn Haagwinde, Distel, Brandnetel, Kweekgras en paardenbloem. Deze vijf onkruiden zijn vrij algemeen en daarom is de scope van ons project ook het verbreden en verdiepen van de applicatie geworden.</p>
+				<p>Eerst zal ik beginnen met wat voorkennis, voor ons heeft al een projectgroep van de minor Smart Industry gewerkt aan een applicatie die het mogelijk maakt om onkruid te herkennen. Ze hebben hierbij gebruik gemaakt van Tensorflow. Tensorflow is een Machine learing tool van google die veel voor vergelijkbare doeleinde gebruikt wordt. De vorige projectgroep hebben met de tool 5 algemene onkruiden aangeleerd. De vijf soorten die ze hebben gedaan zijn Haagwinde, Distel, Brandnetel, Kweekgras en paardenbloem. Deze vijf onkruiden zijn vrij algemeen en daarom is de scope van ons project ook het verbreden en verdiepen van de applicatie geworden.</p>
 				<p><b>Onderzoek</b></p>
 				<p>Zoals hierboven ook al is beschreven heeft de vorige projectgroep 5 soorten onkruiden in de tool geleerd. On doel voor het project was om meer onkruiden herkent te krijgen. hiervoor hebben we desk- en fieldresearch gedaan. Daarnaast zijn we opzoek gegaan naar online databanken waarbij we meer foto’s van onkruiden kunnen vinden zodat er genoeg data is om in te voeren in het model.</p>
 				<p><i>Onkruiden</i></p>
