--- a/Smart Start.html
+++ b/Smart Start.html
@@ -25,6 +25,7 @@
 				<li><a href="Smart Technologie.html">Smart Technology</a></li>
 				<li><a href="Smart Project.Html">Smart Project</a></li>
 				<li><a href="competenties.html">Competenties</a></li>
+				<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -42,14 +43,14 @@
 	</div>
 		<div class="container3">
 		<div class="btn-group2">
-		<a href="SS week 1.html" button class="button">Week 1</button></a>
-		<a href="SS week 2.html" button class="button">Week 2</button></a>
-		<a href="SS week 3.html" button class="button">Week 3</button></a>
+		<a href="SS week 1.html" button class="button">Opensource</button></a>
+		<a href="SS week 2.html" button class="button">ATAG</button></a>
+		<a href="SS week 3.html" button class="button">Sustainable business proposition</button></a>
 			</div>
 	<br>
 	<div class="btn-group2">
-			<a href="SS week 4.html" button class="button">Week 4</button></a>
-			<a href="SS week 5.html" button class="button">Week 5</button></a>
+			<a href="SS week 4.html" button class="button">Agile en Lean</button></a>
+			<a href="SS week 5.html" button class="button">platform business model</button></a>
 			<a href="SS week 6.html" button class="button">Ervaring</button></a>
 	</div>
 </div>
