--- a/bezoeken.html
+++ b/bezoeken.html
@@ -21,11 +21,11 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="Smart Start.html">Smart Start</a></li>
 					<li><a href="Smart Connection.html">Smart Connection</a></li>
-					<li><a class="active" href="Smart Business.html">Smart Business</a></li>
+					<li><a href="Smart Business.html">Smart Business</a></li>
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
-					<li><a href="competenties.html">Competenties</a></li>
-					<li><a href="bezoeken.html">Bezoeken</a></li>
+          <li><a href="competenties.html">Competenties</a></li>
+          <li><a class="active" href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -43,15 +43,11 @@
 	</div>
 		<div class="container3">
 		<div class="btn-group2">
-		<a href="SB week 1.html" button class="button">Stel je zelf voor</button></a>
-		<a href="SB week 2.html" button class="button">BeInformed</button></a>
-		<a href="SB week 4.html" button class="button">Bezoek ELK</button></a>
+		<a href="SB week 1.html" button class="button">ELK</button></a>
+		<a href="SB week 2.html" button class="button">ATAG</button></a>
+    <a href="SB week 4.html" button class="button">Kookworkshop</button></a>
+    <a href="SB week 5.html" button class="button">3D printen</button></a>
 			</div>
-	<br>
-	<div class="btn-group2">
-			<a href="SB week 5.html" button class="button">Target Operating Model</button></a>
-			<a href="SB week 6.html" button class="button">Ervaring</button></a>
-	</div>
 </div>
 
 <footer id="main-footer">
