--- a/ATAG.html
+++ b/ATAG.html
@@ -20,11 +20,12 @@
 			<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="Smart Start.html">Smart Start</a></li>
-					<li><a class="active"href="Smart Connection.html">Smart Connection</a></li>
-					<li><a  href="Smart Business.html">Smart Business</a></li>
-					<li><a href="Smart Technologie.html">Smart Technology</a></li>
+					<li><a href="Smart Connection.html">Smart Connection</a></li>
+					<li><a href="Smart Business.html">Smart Business</a></li>
+					<li><a  href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
 					<li><a href="competenties.html">Competenties</a></li>
+					<li><a class="active" href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,8 +37,8 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Connection.html">Smart Connection</a> > Week 1
-			<h1>Smart Technologie </h1>
+				<a href="bezoeken.html">Bezoeken</a> > ATAG
+			<h1>Bezoeken</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -46,7 +47,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 		<aside id="sidebar">
-			<p>Smart Connection Week 1 </p>
+			<p>ATAG </p>
 		</aside>
 	</div>
 
