--- a/ELK.html
+++ b/ELK.html
@@ -22,9 +22,10 @@
 					<li><a href="Smart Start.html">Smart Start</a></li>
 					<li><a href="Smart Connection.html">Smart Connection</a></li>
 					<li><a href="Smart Business.html">Smart Business</a></li>
-					<li><a class="active" href="Smart Technologie.html">Smart Technology</a></li>
+					<li><a  href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
 					<li><a href="competenties.html">Competenties</a></li>
+					<li><a class="active" href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Technologie.html">Smart Technologie</a> > Week 5
+				<a href="bezoeken.html">Bezoeken</a> > ELK
 			<h1>Smart Technologie </h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -46,7 +47,7 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 		<aside id="sidebar">
-			<p>Smart Technologie Week 5 </p>
+			<p>ELK </p>
 		</aside>
 	</div>
 
