--- a/SB week 4.html
+++ b/SB week 4.html
@@ -25,6 +25,7 @@
 				<li><a href="Smart Technologie.html">Smart Technology</a></li>
 				<li><a href="Smart Project.Html">Smart Project</a></li>
 				<li><a href="competenties.html">Competenties</a></li>
+				<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Business.html">Smart Business</a> > Week 4
+				<a href="Smart Business.html">Smart Business</a> > Bezoek ELK
 			<h1>Smart Business </h1>
 			<p>
 				<p><b>Weekopdracht Smart Business week 4</b></p>
