--- a/SS week 1.html
+++ b/SS week 1.html
@@ -25,6 +25,7 @@
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
 					<li><a href="Smart Project.Html">Smart Project</a></li>
 					<li><a href="competenties.html">Competenties</a></li>
+					<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -36,7 +37,7 @@
 
 	<div class="container">
 		<section id="main">
-				<a href="Smart Start.html">Smart Start</a> > Week 1
+				<a href="Smart Start.html">Smart Start</a> > Opensource
 				<h1>Smart Start</h1>
 				<p>
 					<p><b>Doe nader literatuuronderzoek naar de Smart Industry thema's die je hebt besproken
