--- a/SS week 6.html
+++ b/SS week 6.html
@@ -25,6 +25,7 @@
 				<li><a href="Smart Technologie.html">Smart Technology</a></li>
 				<li><a href="Smart Project.Html">Smart Project</a></li>
 				<li><a href="competenties.html">Competenties</a></li>
+				<li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
