--- a/competenties.html
+++ b/competenties.html
@@ -27,6 +27,7 @@
 					<li><a href="Smart Technologie.html">Smart Technology</a></li>
           <li><a href="Smart Project.Html">Smart Project</a></li>
           <li><a class="active" href="competenties.html">Competenties</a></li>
+          <li><a href="bezoeken.html">Bezoeken</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -39,21 +40,21 @@
     <div class="container2">
 	
       <h2>Smart Business</h2>
-      <p>Via de knoppen die hieronder kun je per week zien wat ik heb gedaan voor Smart Business </p>
+      <p>Via de knoppen die hieronder staan zie je uitgelegd waarom ik de competenties heb behaald. </p>
     </div>
       <div class="container3">
       <div class="btn-group2">
-      <a href="Herkennen.html" button class="button">Herkennen,<br>  Analyseren, Diagnosticeren</button></a>
-      <a href="Innoveren.html" button class="button">Innoveren, <br> Ontwerpen</button></a>
+      <a href="Herkennen.html" button class="button">Herkennen, Analyseren, Diagnosticeren</button></a>
+      <a href="Innoveren.html" button class="button">Innoveren en Ontwerpen</button></a>
       <a href="Projectmanagement.html" button class="button">Projectmanagement</button></a>
       <a href="Onderzoeken.html" button class="button">Onderzoeken</button></a>
       </div>
     <br>
     <div class="btn-group2">
         
-        <a href="Communiceren.html" button class="button">Communiceren, <br> Adviseren</button></a>
-        <a href="Samenwerken.html" button class="button">Samenwerken, <br> Netwerken</button></a>
-        <a href="Professionaliseren.html" button class="button">Professionaliseren, <br> Verantwoord handelen</button></a></div>
+        <a href="Communiceren.html" button class="button">Communiceren en Adviseren</button></a>
+        <a href="Samenwerken.html" button class="button">Samenwerken en Netwerken</button></a>
+        <a href="Professionaliseren.html" button class="button">Professionaliseren en Verantwoord handelen</button></a></div>
         <br>
         <div class="btn-group2"> 
         
