--- a/3d printen.html
+++ b/3d printen.html
@@ -39,12 +39,13 @@
 		<section id="main">
 				<a href="bezoeken.html">Bezoeken</a> > 3D Printen
 			<h1>Bezoeken</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+        <p>Tijdens dit bedrijfsbezoek in Ede hebben we een presentatie en een rondleiding gehad bij een commercieel 3D printer. Tijdens de presentatie heeft de directeur ons alle mogelijkheden en eigenschappen van het 3D printen laten zien. De mogelijkheden zijn nog veel groter dan ik eerst dacht. </p>
+        <p>Verder hebben we de 3D printers zelf gezien. Je zou denken dat er niet zo veel ruimte nodig is voor 3D printers maar dat valt vies tegen. Daarnaast moeten veel van de 3D geprinte voorwerpen nog worden bewerkt wanneer ze uit de machines komen. </p>
+        <p>Ik heb een nieuw respect gekregen voor 3D printen. Vaak zie je op internet hobbyisten die de meest gekke dingen printen maar een commerciële toepassing kom je niet heel vaak tegen. Als ik verder in mijn carriere een keer in een situatie terecht kom waarbij ik een onderdeel of een verpakking moet produceren ga ik zeker de mogelijkheid van 3D printen onderzoeken.</p>
+        </p>
+        
+        <img src=  https://i.imgur.com/kpN428e.jpg alt="3d printen" width="60%" >
 		</section>
 		<aside id="sidebar">
 			<p>3D Printen </p>
