--- a/ATAG.html
+++ b/ATAG.html
@@ -39,12 +39,12 @@
 		<section id="main">
 				<a href="bezoeken.html">Bezoeken</a> > ATAG
 			<h1>Bezoeken</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+        <p>De dag bij ATAG begon met een presentatie van de directeur van ATAG Nederland. Hierin kregen we de geschiedenis en structuur van ATAG te zien. ATAG is onderdeel van het Chinese Hisense en heeft meerdere merken onder zijn hoede waarvan ATAG de het Premium merk is. </p>
+        <p>Na de presentatie zijn we in twee groepen opgesplitst waarbij ik eerst een rondleiding kreeg bij de R&D-afdeling, het magazijn en de kwaliteit control afdeling. ATAG heeft R&D nog voornamelijk in house. Dat wil zeggen dat ze een aantal apparaten hebben waarmee ze zelf prototype kunnen maken die later ergens anders op grote schaal geproduceerd kunnen worden. Daarnaast kregen we het magazijn te zien waarin alle reserveonderdelen lagen. </p>
+        <p>Het tweede gedeelte van de rondleiding was die van de showroom, de showroom bestond uit 3 niveaus met elk niveau een eigen merk.</p>
+        <p>Ik vond zelf dit bezoek niet heel nuttig want is zag de link met smart industry niet. Dit kwam denk ik ook deels omdat het bezoek ook met een andere minor was.</p>
+        </p>
 		</section>
 		<aside id="sidebar">
 			<p>ATAG </p>
