--- a/ELK.html
+++ b/ELK.html
@@ -39,12 +39,12 @@
 		<section id="main">
 				<a href="bezoeken.html">Bezoeken</a> > ELK
 			<h1>Smart Technologie </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>Tijdens het bezoek aan ELK hebben we een mooi inzicht gekregen in de manier van werken bij ELK. De filosofie die ELK heeft gecreëerd klinkt als volgt ‘Geen Gedoe’. Met deze filosofie proberen ze bij ELK klantwaarde te creëren door te werken met Agile, Lean en Scrum. ELK zet de methode van werken in om alle onnodige processen en stappen uit een project te halen waardoor er alleen middelen en mensen worden ingezet op plekken waar het waarde creëert. Op deze manier hebben ze zelfs door de moeilijke periode van de economische crisis het hoofd boven water weten te houden, waar menig bouwbedrijf dat niet wist te doen.</p>
+				<p>Tijdens de presentatie van de directeur en de rondleiding door het gebouw kregen we te zien hoe ze dit voor elkaar hebben gekregen. Alle projecten worden onderverdeelt in zogenaamde werkgroepen. Deze werkgroepen hebben dus de leiding over een project en bestaand uit mensen van kantoor maar ook voormannen op locatie zelf. Daarnaast werken de mensen op locatie ook volgens de Scrum methode en krijgen ze de vrijheid om dit zelf op te stellen en uit te werken tot de dagelijkse taken.</p>
+				<p>Wat mij vooral duidelijk werd in de loop van de dag is dat volgens ELK de belangrijkste mensen in het bedrijf de mensen op locatie zijn i.p.v. de mensen op kantoor, daarnaast zeiden ze zelf dat ELK zo georganiseerd is dat het niet zomaar een bouw bedrijf is die sterk is gegroeid maar dat het tegenovergestelde waar is. ELK heeft zijn groei goed aangepakt en is zich gaan focussen op het verbeteren van processen i.p.v. doorgaan op de zelfde manier bij economisch groei en er dan in slechtere tijden achter komen dat de groei niet duurzaam was.</p> 
+				<p>Verder hebben we na een luxe lunch een erg goede spoed cursus van Blinklane over agile en Scrum gekregen. Op een speelse wijze hebben we gewerkt met Scrum zodat we dit zelf ook konden toepassen bij ons eigen project.</p>
+				<img src= https://i.imgur.com/OSjUItx.jpg  alt="ELK" width="60%" >
+				<img src= https://i.imgur.com/07RsRZx.jpg alt="ELK" width="60%">
 		</section>
 		<aside id="sidebar">
 			<p>ELK </p>
