--- a/Kookworkshop.html
+++ b/Kookworkshop.html
@@ -39,12 +39,14 @@
 		<section id="main">
 				<a href="bezoeken.html">Bezoeken</a> > Kookworkshop
 			<h1>Bezoeken</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p>
+        <p>De hele klas verzamelde zich in Wijchen voor een kookworkshop. De dag begon met het presenteren van het project voor de hele klas en hierbij hebben we wat goede feedback gekregen.</p>
+        <p>Daarna zijn we de keuken ingegaan en werden we opgedeeld in groepen. Iedere groep kreeg vervolgens een mystery box met daarin voor iedereen andere ingrediënten. De opdracht was simpel, maak met deze ingrediënten een gang. We werden daardoor wel meteen in het diepen gegooid. </p>
+        <p>Gelukkig heb ik veel ervaring in de keuken en had ik binnen onze groep meteen de leiding gepakt. Met wat input van de begeleider zijn we op het volgende gerecht gekomen, verse ravioli gevuld met champignon en eekhoorntjesbrood met daarbij gegrilde eendenborst met een rode wijnsaus. Ravioli maken is een tijdrovende taak maar gelukkig niet al te lastig waardoor de minder ervaren koks in onze groep dit op zich konden nemen en ik me meer bezig kon houden met de lastigere taken zoals de vulling en de eendenborst.</p>
+        <p>Ons gerecht is zeer goed gelukt en viel ook bij de rest in de smaak. Ik vond het zelf een erg leuke dag en het heeft ook voor wat teambuilding gezorgd in het projectteam.</p>
+        </p>
+        <img src= https://i.imgur.com/AgpAL1s.jpg alt="kookworkshop" width="60%">
+					<img src= https://i.imgur.com/RouuzVE.jpg alt="kookworkshop" width="60%">
 		</section>
 		<aside id="sidebar">
 			<p>Kookworkshop</p>
