--- a/bezoeken.html
+++ b/bezoeken.html
@@ -43,10 +43,10 @@
 	</div>
 		<div class="container3">
 		<div class="btn-group2">
-		<a href="SB week 1.html" button class="button">ELK</button></a>
-		<a href="SB week 2.html" button class="button">ATAG</button></a>
-    <a href="SB week 4.html" button class="button">Kookworkshop</button></a>
-    <a href="SB week 5.html" button class="button">3D printen</button></a>
+		<a href="ELK.html" button class="button">ELK</button></a>
+		<a href="ATAG.html" button class="button">ATAG</button></a>
+    <a href="Kookworkshop.html" button class="button">Kookworkshop</button></a>
+    <a href="3d printen.html" button class="button">3D printen</button></a>
 			</div>
 </div>
 
